samples/_failures_safe/1761072584_3c896d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e016dc6d.c:182: error: expected ‘;’, ‘,’ or ‘)’ at end of input
